--- a/style.css
+++ b/style.css
@@ -2,6 +2,21 @@
     width: 960px;
 }
 
+.main > p{
+	text-align: justify;
+}
+
+img{
+    width: 400px;
+    float: left;
+    margin-right: 15px;
+    border: 3px black solid;
+}
+
+.important{
+	background-color: yellow;
+}
+
 img{
     width: 400px;
     float: left;
